# auto_ml

./: .gitignore  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: model_config.yaml
notebooks/: best_model.pkl  best_regression_model.pkl  best_time_series_model.pkl  manual_ts_monthly_oas_pycaret..ipynb  monthly_oas_pycaret.ipynb  pycaret_test.ipynb  regression_monthly_oas_pycaret .ipynb  ts_monthly_oas_pycaret.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/models/: best_ts_model.pkl  regression_best_model.pkl
src/utils/: csv_exporter.py
tests/: changelog_pycaret.md  test_pycaret_prediction.py  test_pycaret_ts.py
